# embedded-protocol-chain

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
protocol_parser/app/: main.c  protocol_parser_test.c  protocol_parser_test_windows.c  protocol_parser_test_zephyr.c
protocol_parser/core/: protocol_parser.c  protocol_parser.h
protocol_parser/protocols/camyu/: protocol_parser_camyu.c  protocol_parser_camyu.h
protocol_parser/protocols/imperx/: protocol_parser_imperx.c  protocol_parser_imperx.h
protocol_parser/protocols/ymodem/adapter/: protocol_parser_ymodem.c  protocol_parser_ymodem.h
